Created skeleton for frontend mk_2

--- a/survey-app-frontend/src/app/dashboard/dashboard.component.html
+++ b/survey-app-frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,27 @@
-<p>dashboard works!</p>
+<!-- <mat-grid-list cols="12">
+    <mat-grid-tile colspan="2"></mat-grid-tile>
+    <mat-grid-tile colspan="8"> -->
+        <div class="spacer_mk1"></div>
+        <mat-accordion>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Create New Survey Form
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+            </mat-expansion-panel>
+            
+            <div class="spacer_mk1"></div>
+
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        My Surveys
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+            </mat-expansion-panel>
+        </mat-accordion>
+
+    <!-- </mat-grid-tile>
+    <mat-grid-tile colspan="2"></mat-grid-tile>
+</mat-grid-list> -->
