--- a/survey-app-frontend/src/app/app.component.html
+++ b/survey-app-frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span>Navbar Logo</span>
+        <span>Survey Banditos</span>
         <span class="example-spacer"></span>
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
+        
+        <a *ngIf="loggedIn" routerLink="/login" ><mat-icon [ngStyle]="{'color':'white'}" class="example-icon" aria-hidden="false" aria-label="Example heart icon">person</mat-icon></a>
     </mat-toolbar-row>
 </mat-toolbar>
 
