--- a/survey-app-frontend/src/app/create-survey/create-survey.component.html
+++ b/survey-app-frontend/src/app/create-survey/create-survey.component.html
@@ -1,1 +1,37 @@
-<p>create-survey works!</p>
+<h2>Create Survey</h2>
+
+<div class="container-fluid">
+    <div class="row">
+      <h3>Question Title</h3>
+    </div>
+    <div class="spacer_mk3"></div>
+  <div class="row">
+    <div class="col-md-2 offset-10">
+        <span>Add Question </span>
+      <button mat-fab color="primary" (click)="addQuestion()"><mat-icon aria-hidden="false" aria-label="Example Add icon">add</mat-icon></button>
+    </div>
+  </div>
+  <br />
+  <mat-divider></mat-divider>
+  <div class="row">
+    <h4>Question List</h4>
+    <mat-card class="col-md-10 offset-1 example card" *ngFor="let ques of questionList">
+      <mat-card-title>{{ques.qStatement}}</mat-card-title>
+      <mat-card-subtitle>{{ques.qType}}</mat-card-subtitle>
+      <mat-card-content>
+        <ol>
+            <li *ngFor="let opt of ques.qOptionList">
+                {{opt.value}}
+            </li>
+        </ol>
+          
+      </mat-card-content>
+      
+      <button mat-button color="primary" (click)="removeQuestion(ques)">Delete</button>
+    </mat-card>
+
+    
+
+  </div>
+
+</div>
