--- a/survey-app-frontend/src/app/my-surveys/my-surveys.component.html
+++ b/survey-app-frontend/src/app/my-surveys/my-surveys.component.html
@@ -1,1 +1,51 @@
-<p>my-surveys works!</p>
+<mat-tab-group>
+    <mat-tab label="Audio">
+            <div class="container-fluid">
+                    <div class="row no-gutters">
+                            <mat-card class="example-card" *ngFor="let item of audioItems">
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.description}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-actions>
+                                        <button mat-button color="primary">Analyze</button>
+                                        <button mat-button color="primary">Delete</button>
+                                    </mat-card-actions>
+                                </mat-card>
+                    </div>
+                </div>
+            
+    </mat-tab>
+    <mat-tab label="Video">
+            <div class="container-fluid">
+                    <div class="row no-gutters">
+                            <mat-card class="example-card" *ngFor="let item of videoItems">
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.description}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-actions>
+                                        <button mat-button color="primary">Analyze</button>
+                                        <button mat-button color="primary">Delete</button>
+                                    </mat-card-actions>
+                                </mat-card>
+                    </div>
+                </div>
+    </mat-tab>
+    <mat-tab label="Text">
+            <div class="container-fluid">
+                    <div class="row no-gutters">
+                            <mat-card class="example-card" *ngFor="let item of textItems">
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.description}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-actions>
+                                        <button mat-button color="primary">Analyze</button>
+                                        <button mat-button color="primary">Delete</button>
+                                    </mat-card-actions>
+                                </mat-card>
+                    </div>
+                </div>
+         </mat-tab>
+</mat-tab-group>
