--- a/survey-app-frontend/src/app/generate-survey/generate-survey.component.html
+++ b/survey-app-frontend/src/app/generate-survey/generate-survey.component.html
@@ -11,7 +11,7 @@
               <!-- <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required> -->
             </mat-form-field>
             <div>
-              <button mat-button matStepperNext>Next</button>
+              <button mat-button  color="primary" matStepperNext>Next</button>
             </div>
           </form>
         </mat-step>
@@ -24,8 +24,8 @@
             
             <div>
                 {{secondFormGroup.value.secondCtrl}}
-                <button mat-button matStepperPrevious (click)="temp()">Create</button>
-                <button mat-button (click)="stepper.reset()">Reset</button>
+                <button mat-button color="primary" matStepperPrevious (click)="createSurvey()">Create</button>
+                <button mat-button color="primary" (click)="stepper.reset()">Reset</button>
             </div>
           </form>
         </mat-step>
