--- a/survey-app-frontend/src/app/create-question/create-question.component.html
+++ b/survey-app-frontend/src/app/create-question/create-question.component.html
@@ -1,5 +1,4 @@
-<p>create-question works!</p>
-<h1 mat-dialog-title>Hi</h1>
+<h3>Create Question</h3>
 <div mat-dialog-content>
     <form [formGroup]="tempForm">
         <mat-form-field>
@@ -17,7 +16,7 @@
         <mat-form-field>
             <input matInput placeholder="Add Option" #optValue />
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="addOption(optValue.value)">Add</button>
+        <button [disabled]="tempForm.controls.qType.value!='singleChoice' && tempForm.controls.qType.value!='multiChoice'" mat-raised-button color="primary" (click)="addOption(optValue.value)">Add</button>
         <mat-chip-list #chipList aria-label="Option selection">
             <mat-chip *ngFor="let option of tempForm.controls.qOptionList.value" [selectable]="selectable" [removable]="removable" (removed)="removeOption(option)">
                 {{option.value}}
@@ -27,6 +26,6 @@
     </form>
 </div>
 <div mat-dialog-actions>
-  <!-- <button mat-button (click)="onNoClick()">No Thanks</button> -->
-  <button mat-button [mat-dialog-close]="tempForm.value" cdkFocusInitial>Ok</button>
+  <!-- <button mat-button (click)="onNoClick()">Cancel</button> -->
+  <button mat-raised-button [mat-dialog-close]="tempForm.value" cdkFocusInitial>Save</button>
 </div>
