--- a/survey-app-frontend/src/app/create-survey/create-survey.component.css
+++ b/survey-app-frontend/src/app/create-survey/create-survey.component.css
@@ -6,3 +6,19 @@
     width: 30%;
     margin: 15px;
 }
+
+.example-radio-group {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
+
+  .example-mat-checkbox{
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+  }
