Frontend Complete -1 mk_5

--- a/survey-app-frontend/src/app/create-survey/create-survey.component.html
+++ b/survey-app-frontend/src/app/create-survey/create-survey.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
     <div class="row">
       <h3>Question Title</h3>
+      <iframe width="956" height="538" [src]="mediaURL" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="spacer_mk3"></div>
   <div class="row">
