--- a/survey-app-frontend/src/app/show-analysis/show-analysis.component.html
+++ b/survey-app-frontend/src/app/show-analysis/show-analysis.component.html
@@ -1,2 +1,7 @@
-<p>show-analysis works!</p>
-<p-chart type="line" [data]="dataChart"></p-chart>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 offset-2">
+            <p-chart type="pie" [data]="dataChart"></p-chart>
+        </div>
+    </div>
+</div>
